# GroupFormation

./: .gitignore  Makefile  README.md  README.org  README_zhiru.md  launch2014.sh  pyproject.toml  requirements.txt
data/2016/: tmp_priorities.txt  tmp_projects.txt  tmp_students.txt  types.csv
data/2018/: projects.csv  students.csv
data/2019-bachelor/: projects.csv  students.csv  types.csv
data/2020-z/: Algorithm understanding.xlsx  dtypes.csv  projects.csv  students.csv  students.xlsx  survey_data_test.csv  survey_data_test.xlsx
data/e20/: data.csv  data.ods  data.xlsx  types.csv
data/example/: data.xlsx  types.csv
data/zhiru-e21/: data.xlsx
data/zhiru-e21-ds/: .~lock.data.xlsx#  data.csv  data.xlsx
data/zhiru-e21/tex/: main.tex
scripts/: #prova.py#  analysis.R  convert.sh  prepare-data.py  prepare-data.py~
sln/: sol_001.txt
src/: check_sol.py  load_data.py  lottery.py  main.py  models_hooker.py  models_ip.py  models_ip_envyfree.py  models_ip_ext.py  models_ip_instability.py  models_ip_scip.py  models_ip_weighted.py  owa.py  prepare-data.py  report_sol.py  report_sol_new.py  utils.py
src/prensio/: __init__.py  __main__.py  check_sol.py  load_data.py  main.py  models_ip_ext.py  utils.py
